--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,9 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "csignal": "cpp",
+        "ctime": "cpp",
+        "iomanip": "cpp"
     }
 }
